[package]
name = "remote-commander"
version = "0.1.0"
edition = "2021"
description = "A Norton Commander-style dual-pane file manager with SSH support"
authors = ["Chris"]

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# SSH client with SFTP support
ssh2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# File system utilities
dirs = "5"
chrono = "0.4"

# Password input
rpassword = "7"

[dev-dependencies]
tempfile = "3"
